--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,5 @@
 — Спасибо, колобок! Славная песенка, еще бы послушала! Сядь-ка на мой язычок да пропой в последний разок, — сказала лиса и высунула свой язык.
 
 Колобок прыг ей на язык, а лиса — ам его! — и скушала.</string>
-    <string name="news">Уж сколько раз твердили миру,\nЧто лесть гнусна, вредна; но только все не впрок,\nИ в сердце льстец всегда отыщет уголок.\n\nВороне где-то бог послал кусочек сыру;\nНа ель Ворона взгромоздясь,\nПозавтракать было совсем уж собралась,\nДа призадумалась, а сыр во рту держала.\nНа ту беду Лиса близехонько бежала;\nВдруг сырный дух Лису остановил:\nЛисица видит сыр, Лисицу сыр пленил.\nПлутовка к дереву на цыпочках подходит;\nВерти́т хвостом, с Вороны глаз не сводит\nИ говорит так сладко, чуть дыша:\n«Голубушка, как хороша!\nНу что за шейка, что за глазки!\nРассказывать, так, право, сказки!\nКакие перушки! Какой носок!\nИ, верно, ангельский быть должен голосок!\nСпой, светик, не стыдись! Что, ежели, сестрица,\nПри красоте такой и петь ты мастерица, —\nВедь ты б у нас была царь-птица!»\nВещуньина с похвал вскружилась голова,\nОт радости в зобу дыханье спёрло, —\nИ на приветливы Лисицыны слова\nВорона каркнула во все воронье горло:\nСыр выпал — с ним была плутовка такова.</string>
+    <string name="news">TODO</string>
 </resources>
